# VK_C_CPP

./: CMakeLists.txt  README.md  comparison.sh  data.txt  memtest.sh
.github/workflows/: ci.yml
linters/: run.sh
project/: main.c  test.c
project/aircrafts_lib/: CMakeLists.txt  aircraft.c  aircraft.h  aircrafts_array.c  aircrafts_array.h  return_codes.h
project/aircrafts_lib/aircrafts_lib/: Makefile  cmake_install.cmake
project/inc/: utils.h
project/posts_lib/: CMakeLists.txt
project/posts_lib/inc/: count.h  post.h  post_count.h  posts_array.h  return_codes.h
project/posts_lib/src/: post.c  posts_array.c  return_codes.c
project/posts_lib/src/count/: parallel_count.c  sequential_count.c
project/src/: main.c  utils.c
project/tests/: CMakeLists.txt  create_big_data.py  testTime.cpp
project/tests/src/: testsCount.cpp  testsPost.cpp  testsPostsArray.cpp  tests_aircraft.cpp  tests_aircrafts_array.cpp
